fix(Dockerfile): update production start command and include dotenv for environment variables fix(package.json): modify start:prod script to use dotenv-cli for environment configuration refactor(tests): update import paths for Prisma mock in unit tests delete(tests): remove unused end-to-end test files and configurations

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=production -- npx dotenv-cli .env.production.local -- node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --config jest.config.ts",
     "test:int": "docker compose exec backend -- jest --runInBand --config jest.int.config.ts",
@@ -36,6 +36,7 @@
     "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.0.1",
+    "dotenv-cli": "^7.4.2",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
     "class-transformer": "^0.5.1",
@@ -51,7 +52,9 @@
     "validation-br": "^1.5.2",
     "xml-crypto": "^6.0.0",
     "xml2js": "^0.6.2",
-    "xmlbuilder2": "^3.1.1"
+    "xmlbuilder2": "^3.1.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.2.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -67,12 +70,10 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^6.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
