fix(package.json): add production seed script for Prisma seeder

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
-    "seed": "npx ts-node ./src/shared/prisma/seeders/prisma.seeder.ts"
+    "seed": "npx ts-node ./src/shared/prisma/seeders/prisma.seeder.ts",
+    "seed:prod": "npx ts-node ./dist/src/shared/prisma/seeders/prisma.seeder.ts --prod"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
