fix(package.json): update prisma migrate deploy command to use dotenv-cli for production

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev",
-    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:migrate:deploy": "npx dotenv-cli .env.production.local -- prisma migrate deploy",
     "seed": "npx ts-node ./src/shared/prisma/seeders/prisma.seeder.ts",
     "seed:prod": "npx ts-node ./dist/src/shared/prisma/seeders/prisma.seeder.ts --prod"
   },
