--- a/package.json
+++ b/package.json
@@ -36,26 +36,26 @@
     "@nestjs/platform-fastify": "^10.4.15",
     "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^8.1.0",
-    "@prisma/client": "^6.0.1",
-    "dotenv-cli": "^7.4.2",
+    "@prisma/client": "6.1.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv-cli": "^7.4.2",
     "forge": "^2.3.0",
+    "jest": "^29.5.0",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.16",
     "puppeteer": "^23.11.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "soap": "^1.1.6",
+    "ts-jest": "^29.2.5",
     "uuid": "^11.0.3",
     "validation-br": "^1.5.2",
     "xml-crypto": "^6.0.0",
     "xml2js": "^0.6.2",
-    "xmlbuilder2": "^3.1.1",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.2.5"
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -72,7 +72,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.0",
-    "prisma": "^6.0.1",
+    "prisma": "6.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-loader": "^9.4.3",
