fix(docker-compose.yml): add upload limit environment variable for PHPMyAdmin fix(nfse-batch-listener.events.ts): add console log for consult event handling fix(curitiba-repository-impl.ts): improve error handling and logging in response processing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       PMA_HOST: database
       PMA_USER: '${DATABASE_USER-nfse_curitiba}'
       PMA_PASSWORD: '${DATABASE_PASSWORD-root}'
+      UPLOAD_LIMIT: 300M
     depends_on:
       - database
     networks:
