--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,9 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true
-  }
-}
+  },
+"exclude": [
+    "node_modules",
+    "dist",
+    "**/__tests__/*"
+  ]}
