fix(eslint): add __tests__ to ignore patterns and clean up rules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,5 @@
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true
   },
-"exclude": [
-    "node_modules",
-    "dist",
-    "**/__tests__/*"
-  ]}
+  "exclude": ["node_modules", "dist", "**/__tests__/*"]
+}
